--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneSummary.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneSummary.html
@@ -19,8 +19,10 @@
 
 
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
+            <div>
+                <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+                    <vr-button type="Close" data-onclick="$hide"></vr-button>
+                </vr-actionbar>
             </div>
         </div>
     </div>
