--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -1,58 +1,41 @@
-﻿<div class="container-fluid ">
-    <div class="panel panel-primary panel-over-color">
-        <div class="panel-body">
-            <div class="am-collapse" ng-show="inputSectionVisible">
-                <vr-form name="filterForm" novalidate>
-                    <div class="row style-row">
-                        <div class="col-lg-2 style-col">
-                            <label class="control-label">Date Period:</label>
-                            <vr-dropdown datatextfield="name" datavaluefield="value"
-                                         entityname="" type="standard" options="dateTimeFilterOption" data-onselectionchange="updateCharts"></vr-dropdown>
-                        </div>
-                        <div class="col-lg-2 style-col">
-                            <label class="control-label">Measure:</label>
-                            <vr-dropdown datatextfield="name" datavaluefield="value"
-                                         entityname="" type="standard" options="optionsMeasureTypes" data-onselectionchange="updateCharts"></vr-dropdown>
-                        </div>
-                        <div class="col-lg-2 style-col">
-                            <label class="control-label">Top:</label>
-                            <vr-dropdown datatextfield="value" datavaluefield="value"
-                                         entityname="" type="standard" options="optionTopCounts" data-onselectionchange="updateCharts"></vr-dropdown>
-                        </div>
-                    </div>
-                </vr-form>
-            </div>
-
-            <div class="row ">
-                <div class="col-lg-12 col-no-padding ">
-                    <div class="action-bar">
-                        <div class="btn-group action-bar-left">
-                            <button ng-init="inputSectionVisible=true" ng-click="inputSectionVisible = !inputSectionVisible" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" type="button" class="btn btn-default btncustom" aria-label="Left Align">
-                                <span ng-show="inputSectionVisible" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-                                <span ng-hide="inputSectionVisible" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-                            </button>
-
-                        </div>
-                        <div class="btn-group action-bar-right" ng-show="inputSectionVisible">
-                            <!--<button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="onclickClear()">Reset<span style="padding-left:4px" class="glyphicon  glyphicon-refresh" aria-hidden="true"></span></button>-->
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row style-row">
-                <div class="col-lg-4 style-col">
-                    <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
-                </div>
-            </div>
-            <div class="row style-row">
-                <div class="col-lg-4 style-col">
-                    <vr-chart data-on-ready="chartTopCustomersReady" style="display:inline-block"></vr-chart>
-                </div>
-                <div class="col-lg-4 style-col">
-                    <vr-chart data-on-ready="chartTopSuppliersReady" style="display:inline-block"></vr-chart>
-                </div>
-            </div>
-        </div>
+﻿<vr-panel>
+    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+        <vr-form name="filterForm">
+            <vr-row>
+                <vr-columns colnum="2">
+                    <vr-label>Date Period:</vr-label>
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
+                                 entityname="" type="standard" options="dateTimeFilterOption" data-onselectionchange="updateCharts"></vr-dropdown>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-label>Measure:</vr-label>
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
+                                 entityname="" type="standard" options="optionsMeasureTypes" data-onselectionchange="updateCharts"></vr-dropdown>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-label>Top:</vr-label>
+                    <vr-dropdown datatextfield="value" datavaluefield="value"
+                                 entityname="" type="standard" options="optionTopCounts" data-onselectionchange="updateCharts"></vr-dropdown>
+                </vr-columns>
+            </vr-row>
+        </vr-form>
     </div>
-</div>
+    <vr-row removeline="true">
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+            
+        </vr-actionbar>
+    </vr-row>
+    <vr-row>
+        <vr-columns colnum="4">
+            <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <vr-columns colnum="4">
+            <vr-chart data-on-ready="chartTopCustomersReady" style="display:inline-block"></vr-chart>
+        </vr-columns>
+        <vr-columns colnum="4">
+            <vr-chart data-on-ready="chartTopSuppliersReady" style="display:inline-block"></vr-chart>
+        </vr-columns>
+    </vr-row>
+</vr-panel>
