--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -1,86 +1,59 @@
-﻿
-<div class="container-fluid ">
-    <div class="panel panel-primary panel-over-color">
-        <div class="panel-body">
-            <div class="am-collapse" ng-show="inputSectionVisible">
-                <form name="filterForm" novalidate>
-                    <div class="row style-row">
+﻿<vr-panel>
+    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+        <vr-form name="filterForm">
+            <vr-row>
 
-                        <div class="col-lg-2 style-col">
-                            <label class="control-label">Measure:</label>
-                            <vr-dropdown datatextfield="name" datavaluefield="value"
-                                         entityname="" type="standard" options="optionsMeasureTypes" onselectionchange="filterChanged"></vr-dropdown>
-                        </div>
+                <vr-columns colnum="2">
+                    <label class="control-label">Measure:</label>
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
+                                 entityname="" type="standard" options="optionsMeasureTypes" onselectionchange="filterChanged"></vr-dropdown>
+                </vr-columns>
 
-                        <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                            <label class="control-label">From:</label>
-                            <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                                <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="filterChanged()">
-                            </div>
-                        </div>
+                <vr-columns>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="filterChanged"></vr-datetimepicker>
+                </vr-columns>
 
-                        <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                            <label class="control-label">To:</label>
-                            <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                                <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="filterChanged()">
-                            </div>
-                        </div>
+                <vr-columns>
+                    <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="filterChanged"></vr-datetimepicker>
+                </vr-columns>
 
-                        <div class="col-lg-1 style-col">
-                            <label class="control-label">Top:</label>
-                            <vr-dropdown datatextfield="name" datavaluefield="value"
-                                         entityname="" type="standard" options="optionsTopCount" onselectionchange="filterChanged"></vr-dropdown>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <div class="row ">
-                <div class="col-lg-12 col-no-padding ">
-                    <div class="action-bar">
-                        <div class="btn-group action-bar-left">
-                            <button ng-init="inputSectionVisible=true" ng-click="inputSectionVisible = !inputSectionVisible" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" type="button" class="btn btn-default btncustom" aria-label="Left Align">
-                                <span ng-show="inputSectionVisible" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-                                <span ng-hide="inputSectionVisible" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-                            </button>
-
-                        </div>
-                        <div class="btn-group action-bar-right" ng-show="inputSectionVisible">
-                            <!--<button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="onclickClear()">Reset<span style="padding-left:4px" class="glyphicon  glyphicon-refresh" aria-hidden="true"></span></button>-->
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row style-row">
-                <div class="col-lg-5 style-col">
-                    <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
-                </div>
-                <div class="col-lg-5 style-col">
-                    <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
-                </div>
-            </div>
-            <div class="row style-row">
-                <table>
-                    <thead>
-                        <tr>
-                            <th style="width:250px">Zone Name</th>
-                            <th style="width:150px" ng-repeat="header in otherMeasuresDescriptions"> {{header}}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="dataItem in topDestinationData">
-                            <td> {{dataItem.EntityName}}</td>
-                            <td ng-repeat="value in dataItem.Values track by $index">{{value | number:2}}</td>
-                        </tr>
-                    </tbody>
-
-                </table>
-            </div>
-        </div>
+                <vr-columns>
+                    <label class="control-label">Top:</label>
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
+                                 entityname="" type="standard" options="optionsTopCount" onselectionchange="filterChanged"></vr-dropdown>
+                </vr-columns>
+            </vr-row>
+        </vr-form>
     </div>
-</div>
 
+    <vr-row removeline="true">
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
+        </vr-actionbar>
+    </vr-row>
+    <vr-row>
+        <vr-columns colnum="5">
+            <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
+        </vr-columns>
+        <vr-columns colnum="5">
+            <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <table>
+            <thead>
+                <tr>
+                    <th style="width:250px">Zone Name</th>
+                    <th style="width:150px" ng-repeat="header in otherMeasuresDescriptions"> {{header}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="dataItem in topDestinationData">
+                    <td> {{dataItem.EntityName}}</td>
+                    <td ng-repeat="value in dataItem.Values track by $index">{{value | number:2}}</td>
+                </tr>
+            </tbody>
 
-
+        </table>
+    </vr-row>    
+</vr-panel>
