--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -1,50 +1,49 @@
-﻿<div class="panel panel-primary panel-over-color">
-    <div class="panel-body">
-        <div class="row style-row">
-            <div class="col-md-3 col-lg-3 style-col">
-                <h4>Zone Name: {{zoneName}}</h4>
-            </div>
-                
-        </div>
-        <div class="row style-row">
-            <div class="col-lg-2 style-col">
-                <label class="control-label">Zone:</label>
-                <vr-dropdown type="ondemand" options="zonesOption" datatextfield="Name" datavaluefield="ZoneId"
-                             onsearch="searchZones" entityname="Zones" limitcharactercount="2"></vr-dropdown>
-            </div>
+﻿<vr-panel>
+    <vr-row>
+        <vr-columns colnum="3">
+            <h4>Zone Name: {{zoneName}}</h4>
+        </vr-columns>
 
-            <div class="col-lg-1 style-col">
-                <label class="control-label">Grouped By:</label>
-                <vr-dropdown datatextfield="name" datavaluefield="value"
-                                entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="selectedTimeDimensionChanged"></vr-dropdown>
-            </div>
-            <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                <label class="control-label">From:</label>
-                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                    <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateReport()">
-                </div>
-            </div>
+    </vr-row>
+    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+        <vr-form name="formFilter">
+            <vr-row>
+                <vr-columns colnum="2">
+                    <vr-label>Zone:</vr-label>
+                    <vr-dropdown type="ondemand" options="zonesOption" datatextfield="Name" datavaluefield="ZoneId"
+                                 onsearch="searchZones" entityname="Zones" limitcharactercount="2"></vr-dropdown>
+                </vr-columns>
 
-            <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                <label class="control-label">To:</label>
-                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                    <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateReport()">
-                </div>
-            </div>
-           
-            </div>
+                <vr-columns>
+                    <vr-label>Grouped By:</vr-label>
+                    <vr-dropdown datatextfield="name" datavaluefield="value"
+                                 entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="selectedTimeDimensionChanged"></vr-dropdown>
+                </vr-columns>
+                <vr-columns>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="updateReport"></vr-datetimepicker>
+                </vr-columns>
 
-        <div class="row style-row">
-            <div class="col-lg-12 col-md-12   style-col">
-                <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" ui-grid-expandable ui-grid-auto-resize ng-style="getGridHeight(gridOptionsZoneDetails)"></div>
-            </div>
-               
-        </div>
-            
+                <vr-columns>
+                    <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="updateReport"></vr-datetimepicker>
+                </vr-columns>
+
+            </vr-row>
+        </vr-form>
     </div>
-</div>
-<style>
+    <vr-row removeline="true">
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+        </vr-actionbar>
+    </vr-row>
 
+
+    <vr-row class="row style-row">
+        <vr-columns colnum="12">
+            <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" ui-grid-expandable ui-grid-auto-resize ng-style="getGridHeight(gridOptionsZoneDetails)"></div>
+        </vr-columns>
+
+    </vr-row>
+</vr-panel>
+<style>
     .ui-grid-expandable-buttons-cell {
         background-color: #829EBF !important;
         border: none !important;
