--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
@@ -1,7 +1,7 @@
 ﻿<div style="position:relative">
     <div style="position:absolute;right:-10px;top:-16px;">
 
-        <div class="dropdown">
+        <div class="dropdown drop-down-inside-modal">
             <label id="dropdownMenuType" class="dropdown-toggle" style="padding-top:6px" data-toggle="dropdown" aria-expanded="true">
                 <label class="hand-cursor" style="display: inline-block; min-width: 100px; font-size: 12px; border-width: 0px 0px 1px 1px;border-style: solid;border-color: #F0F0F0;
  border-bottom-left-radius: 4px; padding: 5px; ">
