--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -1,4 +1,4 @@
-﻿<div class="dropdown" name="dropdown" ng-model="ctrl.options.selectedvalues.length" ng-mouseenter=" ctrl.showtooltip(); " ng-mouseleave="ctrl.hidetooltip()">
+﻿<div class="dropdown drop-down-inside-modal" name="dropdown" ng-model="ctrl.options.selectedvalues.length" ng-mouseenter=" ctrl.showtooltip(); " ng-mouseleave="ctrl.hidetooltip()">
     <button class="btn btn-default dropdown-toggle" ng-class="isvalidcomp()" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
         <span style="float:left;margin:0px"> {{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:13px;right:5px" class="caret"></span>
@@ -45,7 +45,7 @@
             </div>
         </li>
     </ul>
-    <div  class="tooltip-error disable-animations " ng-show="isvisibleTooltip()" ng-messages="getErrorObject()" >
+    <div class="tooltip-error disable-animations " ng-show="isvisibleTooltip()" ng-messages="getErrorObject()">
         <div ng-message="requiredarray">{{ ctrl.ValidationMessagesEnum.required }}</div>
         <div ng-message="requiredvalue">{{ ctrl.ValidationMessagesEnum.required }}</div>
         <div ng-message="customvalidation">{{ ctrl.customMessage }}</div>
