--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -4,18 +4,17 @@
         <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
             <vr-row>
                 <vr-columns>
-                    <vr-datetimepicker type="date" value="fromDate" label="From: {{formState.gettingDataDisabled}}"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns>
-                    <vr-datetimepicker type="date" value="toDate" label="To:"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="toDate" label="To:" isrequired></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </div>
     </vr-form>
-
     <vr-row removeline="true">
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            <vr-button type="Search" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
+            <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
             <vr-button type="Reset"></vr-button>
         </vr-actionbar>
     </vr-row>
