history route rule grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22270

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -50,6 +50,13 @@
 
 
                 </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-no-padding style-row">
+
+                    <div id="grid2" class="gridroute" ui-grid="gridOptionsHistory">
+                    </div>
+
+
+                </div>
             </div>
         </div>
     </div>
