--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate2.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="CustomerController2">
+﻿<div ng-controller="CustomerController">
     <div class="col-lg-2  style-col">
         <div class="dropdown dropdown-custom" id="dropdownMenuddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption' >
