--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate2.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="PriorityController2">
+﻿<div ng-controller="PriorityController">
     <div class="col-lg-2 style-col">
         <vr-dropdown type="multiple" options="optionsSuppliers" datatextfield="Name" datavaluefield="CarrierAccountID"
                      entityname="Suppliers"></vr-dropdown>
