--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate2.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="ZoneController2">
+﻿<div ng-controller="ZoneController">
     <div class="col-lg-2  style-col">
         <div class="dropdown dropdown-custom" id="Zoneddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" id="dropdownMenuZo" data-toggle="dropdown" aria-expanded="true" ng-model='zoneSelectionOption' >
