--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -11,11 +11,11 @@
             <div class="row ">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 pad-top col-no-padding">
                     <div class="action-bar">
-                        <div class="btn-group action-bar-left">
-                            <label class="action-bar-label">Visible Rows:</label>
-                            <div class="dropdown action-bar-ddl">
-                                <label class=" dropdown-toggle hand-cursor action-bar-ddl-label"  id="dropdownCount" data-toggle="dropdown" aria-expanded="true">
-                                    <span class="no-margin" >{{numberoflines}}</span>
+                        <div class="btn-group action-bar-left" >
+                            <label class="action-bar-label" ng-show="showHis==false">Visible Rows:</label>
+                            <div class="dropdown action-bar-ddl" ng-show="showHis==false">
+                                <label class=" dropdown-toggle hand-cursor action-bar-ddl-label" id="dropdownCount" data-toggle="dropdown" aria-expanded="true">
+                                    <span class="no-margin">{{numberoflines}}</span>
                                 </label>
                                 <ul class="dropdown-menu action-bar-ddl-ul" role="menu" aria-labelledby="dropdownCount" ng-mouseenter="muteaction($event);">
                                     <li role="presentation">
@@ -28,29 +28,40 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button class="btn btn-default btncustom action-bar-btn-icon" ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'"  type="button" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
+                            <button class="btn btn-default btncustom action-bar-btn-icon" ng-show="showHis==false" ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'" type="button" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
 
 
                         </div>
                         <div class="btn-group action-bar-right">
+                            <button type="button" class="btn btn-default btncustom btncustom action-bar-btn-icon no-float" ng-show="gridOptionsHistory.data.length > 0" ng-click="switchGrids()" aria-label="Left Align">
+                                <span ng-show="showHis==false">
+                                    {{gridOptionsHistory.data.length}}  Action(s)
+                                    <span style="padding-left:4px" class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                </span>
+                                <span ng-show="showHis==true">
+                                    Back
+                                    <span style="padding-left:4px" class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+                                </span>
+                            </button>
+
                             <button type="button" class="btn btn-default btncustom btncustom action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewRoute()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
 
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-no-padding">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-no-padding am-fade" ng-show="showMain==true">
 
                     <div class="loader" ng-show="isloadingdata">
                         <img src="~/../images/loader-mask.gif" />
 
                     </div>
 
-                    <div id="grid1" class="gridroute" ui-grid="gridOptionsRouteRule" ui-grid-selection  ui-grid-infinite-scroll ui-grid-resize-columns ui-grid-auto-resize ui-grid-save-state>
+                    <div id="grid1" class="gridroute" ui-grid="gridOptionsRouteRule" ui-grid-selection ui-grid-infinite-scroll ui-grid-resize-columns ui-grid-auto-resize ui-grid-save-state>
                     </div>
 
 
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-no-padding style-row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-no-padding style-row am-fade " ng-show="showHis==true">
 
                     <div id="grid2" class="gridroute" ui-grid="gridOptionsHistory">
                     </div>
