--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -4,10 +4,10 @@
         <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
             <vr-row>
                 <vr-columns>
-                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired customvalidate="customvalidateTestFrom"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns>
-                    <vr-datetimepicker type="date" value="toDate" label="To:" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="toDate" label="To:" isrequired customvalidate="customvalidateTestTo"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </div>
