Add class style dropdown
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22306

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -111,6 +111,12 @@ Use this for keyframe animations
 .double-col-checklist-md{
     width:575px ;
 }
+.no-filter{
+    height:260px
+}
+.with-filter{
+    height:225px
+}
 .custom-label{
     display: inline-block;
     vertical-align: baseline;
