--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -33,8 +33,8 @@
             </div>
 
             <div class="col-lg-2">
-                <vr-select datasource="testviewCtrl.optionsZone.datasource"
-                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" datatextfield="Name" datavaluefield="ZoneId" entityname="Zone" isrequired  ismultipleselection hidefilterbox></vr-select>
+                <vr-select label="Zoneee" datasource="testviewCtrl.optionsZone.datasource"
+                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" datatextfield="Name" datavaluefield="ZoneId" entityname="Zone" isrequired ismultipleselection></vr-select>
             </div>
             
         </div>
