--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
@@ -11,20 +11,20 @@
                         <div ng-if="ctrl.isEnFilter()" style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
                             <div class="inner-addon right-addon">
 
-                                <i ng-if="! ctrl.isRemoteFilter()" class="glyphicon glyphicon-remove hand-cursor" ng-click="ctrl.clearFilter($event)"></i>
-                                <input ng-if="!ctrl.isRemoteFilter()" type="text" class="form-control input-sm" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" />
+                                <i ng-if="! ctrl.isRemoteLoad()" class="glyphicon glyphicon-remove hand-cursor" ng-click="ctrl.clearFilter($event)"></i>
+                                <input ng-if="!ctrl.isRemoteLoad()" type="text" class="form-control input-sm" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" />
 
-                                <i ng-if="ctrl.isRemoteFilter()" class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
-                                <input ng-if="ctrl.isRemoteFilter()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="ctrl.search();">
+                                <i ng-if="ctrl.isRemoteLoad()" class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
+                                <input ng-if="ctrl.isRemoteLoad()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="ctrl.search();">
 
                             </div>
                         </div>
 
-                        <div ng-if="ctrl.isRemoteFilter()" ng-show="ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
-                        <div ng-if="ctrl.isRemoteFilter()" ng-show="ctrl.showloading">Loading..</div>
+                        <div ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
+                        <div ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.showloading">Loading..</div>
 
                         <div style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
-                            <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.datasource | filter:ctrl.filtername"
+                            <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.getdatasource() | filter:ctrl.filtername"
                                  style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
                                 <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
@@ -34,7 +34,7 @@
                     </div>
                     <!-- filter -->
 
-                    <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.datasource" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
+                    <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
                          style="display: block;padding:2px; margin:2px; white-space: normal;">
                         <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
                     </div>
