--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -34,7 +34,7 @@
 
             <div class="col-lg-2">
                 <vr-select label="Zoneee" datasource="testviewCtrl.optionsZone.datasource"
-                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" datatextfield="Name" datavaluefield="ZoneId" entityname="Zone" isrequired ismultipleselection></vr-select>
+                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" ismultipleselection datatextfield="Name" customvalidate="testviewCtrl.customvalidate1" datavaluefield="ZoneId" entityname="Zone" isrequired></vr-select>
             </div>
             
         </div>
