--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
@@ -6,24 +6,24 @@
                 <li role="presentation" ng-click="ctrl.onClickLi($event)">
 
                     <!-- filter  -->
-                    <div ng-if="ctrl.isMultiple()" style="display: inline-block; width: 220px;">
+                    <div ng-if="ctrl.isContainerVisible()" style="display: inline-block; width: 220px;">
 
                         <div ng-if="ctrl.isEnFilter()" style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
                             <div class="inner-addon right-addon">
 
                                 <i ng-if="! ctrl.isRemoteLoad()" class="glyphicon glyphicon-remove hand-cursor" ng-click="ctrl.clearFilter($event)"></i>
-                                <input ng-if="!ctrl.isRemoteLoad()" type="text" class="form-control input-sm" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" />
+                                <input ng-if="!ctrl.isRemoteLoad()" type="text" class="form-control input-sm" ng-model="ctrl.filtername"  ng-click="ctrl.muteAction($event)" />
 
                                 <i ng-if="ctrl.isRemoteLoad()" class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
-                                <input ng-if="ctrl.isRemoteLoad()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="ctrl.search();">
+                                <input ng-if="ctrl.isRemoteLoad()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-click="ctrl.muteAction($event)" ng-model="ctrl.filtername" ng-change="ctrl.search();">
 
                             </div>
                         </div>
 
-                        <div ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
+                        <div ng-if="ctrl.isRemoteLoad()" ng-show="!ctrl.showloading && ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
                         <div ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.showloading">Loading..</div>
 
-                        <div style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
+                        <div ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
                             <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.getdatasource() | filter:ctrl.filtername"
                                  style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
@@ -31,10 +31,15 @@
                             </div>
                         </div>
 
+                        <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" 
+                             style="display: block;padding:2px; margin:2px; white-space: normal;">
+                            <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
+                        </div>
+
                     </div>
                     <!-- filter -->
 
-                    <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
+                    <div ng-if="!ctrl.isContainerVisible()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
                          style="display: block;padding:2px; margin:2px; white-space: normal;">
                         <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
                     </div>
