--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -2,14 +2,33 @@
 <vr-panel>
     <vr-form name="formFilter">
         <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
-            <vr-row>
-                <vr-columns>
+            <vr-row removeline="true">
+                <vr-columns colnum="2">
+                    <vr-select label="Switches:" datasource="switches"
+                               datatextfield="Name" datavaluefield="SwitchId" selectedvalues="selectedSwitches" ismultipleselection></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select label="Code Groups:" datasource="codeGroups"
+                               datatextfield="Name" datavaluefield="Code" selectedvalues="selectedCodeGroups" ismultipleselection></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select label="Customers:" datasource="customers"
+                               datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedCustomers" ismultipleselection></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select label="Suppliers:" datasource="suppliers"
+                               datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedSuppliers" ismultipleselection></vr-select>
+                </vr-columns>               
+            </vr-row>
+            <vr-row removeline="true">
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired customvalidate="customvalidateTestFrom"></vr-datetimepicker>
                 </vr-columns>
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="toDate" label="To:" isrequired customvalidate="customvalidateTestTo"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
+            <vr-row></vr-row>
         </div>
     </vr-form>
     <vr-row removeline="true">
